@@ -13,19 +13,19 @@
 			<props>
 				<prop key="/**/Special:Account">Register</prop>
 				<prop key="/**/Special:Admin">Admin</prop>
-				<prop key="/**/Special:Allpages">Items</prop>
+				<prop key="/**/Special:AllPages">Items</prop>
 				<prop key="/**/Special:Categories">Category</prop>
 				<prop key="/**/Special:Contributions">Contributions</prop>
 				<prop key="/**/Special:Diff">Diff</prop>
 				<prop key="/**/Special:Edit">Edit</prop>
 				<prop key="/**/Special:Export">Export</prop>
-				<prop key="/**/Special:Filelist">Items</prop>
+				<prop key="/**/Special:FileList">Items</prop>
 				<prop key="/**/Special:History">History</prop>
 				<prop key="/**/Special:Import">Import</prop>
 				<prop key="/**/Special:ImportTiddly">ImportTiddly</prop>
-				<prop key="/**/Special:Imagelist">Items</prop>
+				<prop key="/**/Special:ImageList">Items</prop>
 				<prop key="/**/Special:LinkTo">Items</prop>
-				<prop key="/**/Special:Listusers">Items</prop>
+				<prop key="/**/Special:ListUsers">Items</prop>
 				<prop key="/**/Special:Login">Login</prop>
 				<prop key="/**/Special:Logout">Login</prop>
 				<prop key="/**/Special:Log">Log</prop>
@@ -40,7 +40,7 @@
 				<prop key="/**/Special:Roles">Roles</prop>
 				<prop key="/**/Special:Search">Search</prop>
 				<prop key="/**/Special:Setup">Setup</prop>
-				<prop key="/**/Special:Specialpages">SpecialPages</prop>
+				<prop key="/**/Special:SpecialPages">SpecialPages</prop>
 				<prop key="/**/Special:TopicsAdmin">Items</prop>
 				<prop key="/**/Special:Translation">Translation</prop>
 				<prop key="/**/Special:Upgrade">Upgrade</prop>
