@@ -31,10 +31,10 @@
 <ul>
 <li><jamwiki:link value="Special:TopicsAdmin"><fmt:message key="specialpages.caption.topicsadmin" /></jamwiki:link></li>
 <li><jamwiki:link value="Special:Categories"><fmt:message key="specialpages.caption.categories" /></jamwiki:link></li>
-<li><jamwiki:link value="Special:Filelist"><fmt:message key="specialpages.caption.filelist" /></jamwiki:link></li>
-<li><jamwiki:link value="Special:Imagelist"><fmt:message key="specialpages.caption.imagelist" /></jamwiki:link></li>
-<li><jamwiki:link value="Special:Allpages"><fmt:message key="specialpages.caption.allpages" /></jamwiki:link></li>
-<li><jamwiki:link value="Special:Listusers"><fmt:message key="specialpages.caption.listusers" /></jamwiki:link></li>
+<li><jamwiki:link value="Special:FileList"><fmt:message key="specialpages.caption.filelist" /></jamwiki:link></li>
+<li><jamwiki:link value="Special:ImageList"><fmt:message key="specialpages.caption.imagelist" /></jamwiki:link></li>
+<li><jamwiki:link value="Special:AllPages"><fmt:message key="specialpages.caption.allpages" /></jamwiki:link></li>
+<li><jamwiki:link value="Special:ListUsers"><fmt:message key="specialpages.caption.listusers" /></jamwiki:link></li>
 <li><jamwiki:link value="Special:Log"><fmt:message key="specialpages.caption.logs" /></jamwiki:link></li>
 <li><jamwiki:link value="Special:OrphanedPages"><fmt:message key="specialpages.caption.orphanedpages" /></jamwiki:link></li>
 <li><jamwiki:link value="Special:RecentChanges"><fmt:message key="specialpages.caption.recentchanges" /></jamwiki:link></li>
